--- a/simple_flask_app_in_docker.yml
+++ b/simple_flask_app_in_docker.yml
@@ -1,4 +1,4 @@
-- name: Deploy Flask app in Docker
+- name: Deploy Flask app with K3s
   hosts: all
   become: yes
 
@@ -11,31 +11,39 @@
     - name: Install required packages
       apt:
         name:
-          - docker.io
           - git
+          - curl
+          - ca-certificates
+        state: present
         update_cache: yes
 
-    - name: Ensure Docker service is running
+    - name: Install k3s with containerd
+      shell: |
+        curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="server --write-kubeconfig-mode 644" sh -
+      args:
+        creates: /usr/local/bin/k3s
+
+    - name: Wait for K3s service to become active
       systemd:
-        name: docker
+        name: k3s
         state: started
         enabled: true
+        daemon_reload: yes
+
+    - name: Install nerdctl
+      shell: |
+        curl -LO https://github.com/containerd/nerdctl/releases/download/v2.1.2/nerdctl-full-2.1.2-linux-amd64.tar.gz
+        tar Cxzvf /usr/local nerdctl-full-2.1.2-linux-amd64.tar.gz
+      args:
+        creates: /usr/local/nerdctl
 
     - name: Clone Flask app repository
       git:
         repo: "{{ repo_url }}"
         dest: "{{ app_dir }}"
-
-    - name: Build Docker image
-      command: docker build -t {{ image_name }} .
+    
+    - name: Build container image with nerdctl
+      shell: |
+        nerdctl --address /run/k3s/containerd/containerd.sock -n k8s.io build -t {{ image_name }} {{ app_dir }}
       args:
         chdir: "{{ app_dir }}"
-
-    - name: Run container
-      docker_container:
-        name: flask_app
-        image: "{{ image_name }}"
-        state: started
-        ports:
-          - "8080:8080"
-        restart_policy: always
