--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,34 @@
-appnope==0.1.4
-asttokens==3.0.0
-boto3==1.38.36
-botocore==1.38.36
-comm==0.2.2
+Arpeggio==2.0.2
+attrs==25.3.0
+certifi==2025.6.15
+cffi==1.17.1
+charset-normalizer==3.4.2
+cryptography==45.0.5
 debugpy==1.8.14
 decorator==5.2.1
-executing==2.2.0
-ipykernel==6.29.5
-ipython==9.3.0
-ipython_pygments_lexers==1.1.1
-jedi==0.19.2
+dill==0.4.0
+dogpile.cache==1.4.0
+grpcio==1.66.2
+idna==3.10
+iso8601==2.1.0
 jmespath==1.0.1
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
-packaging==25.0
-parso==0.8.4
-pexpect==4.9.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+keystoneauth1==5.11.1
+openstacksdk==4.6.0
+os-service-types==1.7.0
+parver==0.5
+pbr==6.1.1
 platformdirs==4.3.8
-prompt_toolkit==3.0.51
+protobuf==4.25.8
 psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-Pygments==2.19.1
-python-dateutil==2.9.0.post0
-pyzmq==27.0.0
-s3transfer==0.13.0
-six==1.17.0
-stack-data==0.6.3
-tornado==6.5.1
-traitlets==5.14.3
-typing_extensions==4.14.0
-urllib3==2.4.0
-wcwidth==0.2.13
+pulumi==3.181.0
+pulumi_openstack==5.1.0
+pycparser==2.22
+PyYAML==6.0.2
+requests==2.32.4
+requestsexceptions==1.4.0
+semver==3.0.4
+stevedore==5.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
